Fixed overlapping panels and styled benefits page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -129,6 +129,11 @@ a {
 .btn-partners{
     width: 20%;
 }
+.form-control{
+    width: 40%;
+    text-align: center;
+    margin-left: 295px;
+}
 .row{
     padding-right: 425px;
     padding-left: 425px;
